--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -22,58 +22,107 @@
 
     <div class="container">
 
-      <!-- Start the navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#"><i class="fas fa-thumbs-up"></i></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <!-- Start the navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          <a class="navbar-brand" href="#"><i class="fas fa-thumbs-up"></i></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-      <!-- End the navbar -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
+        <!-- End the navbar -->
 
-      <!-- Start Jumbotron -->
-      <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <h1 class="display-4">Sean's Portfolio Page</h1>
-              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-              <hr class="my-4">
-              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-              </p>
-            </div>
-            <div class="col-lg-6">
-              <img class="img-fluid" src="img/sean.jpg" alt="Sean Morrison">
+        <!-- Start Jumbotron -->
+        <div class="jumbotron">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6">
+                <h1 class="display-4">Sean's Portfolio Page</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+              </div>
+              <div class="col-lg-6">
+                <img class="img-fluid" src="img/dv.jpg" alt="Sean Morrison">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- End Jumbotron -->
+        <!-- End Jumbotron -->
+
+        <!-- Start Gallery -->
+        <div class="container">
+          <div class="row col-sm-12 col-md-12">
+
+            <!-- Left -->
+            <div class="col col-lg-4">
+              <div class="card">
+                <img class="card-img-top img-fluid" src="img/bootstrap.png" alt="Bootstrap Website">
+                <div class="card-body">
+                  <h4 class="card-title">Bootstrap</h4>
+                  <p class="card-text">Build responsive, mobile-first projects on the web with the world's most popular front-end component library.</p>
+                  <a href="https://getbootstrap.com/" class="btn btn-primary" target="_blank">Learn more</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Middle -->
+            <div class="col col-lg-4">
+              <div class="card">
+                <img class="card-img-top img-fluid" src="img/jquery.png" alt="jQuery Website">
+                <div class="card-body">
+                  <h4 class="card-title">jQuery</h4>
+                  <p class="card-text">jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.</p>
+                  <a href="https://jquery.com/" class="btn btn-primary" target="_blank">Learn more</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Right -->
+            <div class="col col-lg-4">
+              <div class="card">
+                <img class="card-img-top img-fluid" src="img/node.png" alt="Node.js Website">
+                <div class="card-body">
+                  <h4 class="card-title">Node.js</h4>
+                  <p class="card-text">Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient.</p>
+                  <a href="https://nodejs.org/en/" class="btn btn-primary" target="_blank">Learn more</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- End Gallery -->
 
 
+        <!-- Footer -->
+        <footer class="text-center bg-primary text-white">
+          <hr>
+          &copy; TechSnazzy, LLC - Site Coded and Written by Sean Morrison
+        </footer>
 
     </div>
 
