--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -9,6 +9,9 @@
     <!-- Load Bootstrap 4 CSS CDN before any other style sheets on the page. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+
     <!-- Fontawesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
@@ -23,7 +26,7 @@
     <div class="container">
 
         <!-- Start the navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary lead">
           <a class="navbar-brand" href="#"><i class="fas fa-thumbs-up"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,16 +60,16 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6">
-                <h1 class="display-4">Sean's Portfolio Page</h1>
+                <h1 class="display-4 text-center">Sean's Portfolio Page</h1>
                 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
                 <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <p class="lead">It uses utility classes for typography and spacing to space content out within the larger container.</p>
                 <p class="lead">
                   <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
                 </p>
               </div>
               <div class="col-lg-6">
-                <img class="img-fluid" src="img/dv.jpg" alt="Sean Morrison">
+                <img class="img-fluid" src="img/macy.jpg" alt="Sean Morrison">
               </div>
             </div>
           </div>
@@ -119,9 +122,39 @@
 
 
         <!-- Footer -->
-        <footer class="text-center bg-primary text-white">
-          <hr>
-          &copy; TechSnazzy, LLC - Site Coded and Written by Sean Morrison
+        <footer class="bg-primary text-white">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4">
+                <h2>Something</h2>
+                <p>Something</p>
+              </div>
+
+              <div class="col-lg-4">
+                <h2>Something</h2>
+                <p>Something</p>
+              </div>
+
+              <div class="col-lg-4">
+                <h2>Social Media</h2>
+                <ul>
+                  <li><i class="fab fa-facebook-f"></i></li>
+                  <li><i class="fab fa-twitter"></i></li>
+                  <li><i class="fab fa-instagram"></i></li>
+                  <li><i class="fab fa-google-plus-g"></i></li>
+                  <li><i class="fab fa-linkedin-in"></i></li>
+                </ul>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col text-center">
+                <p class="lead">&copy; <a class="text-white" href="https://techsnazzy.com" target="_blank">TechSnazzy, LLC</a> - Site Coded and Written by <a class="text-white" href="https://twitter.com/seanmorrison" target="_blank">Sean Morrison</a></p>
+              </div>
+            </div>
+
+          </div>
         </footer>
 
     </div>
