--- a/FCC/Sean-Portfolio/index.html
+++ b/FCC/Sean-Portfolio/index.html
@@ -60,16 +60,16 @@
             <!-- Social Links -->
             <ul class="navbar-nav navbar-right">
               <li class="nav-item">
-                <a href="#" class="nav-link fa fa-facebook" target="_blank"></a>
+                <a href="https://www.facebook.com/" class="nav-link fa fa-facebook" target="_blank"></a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link fa fa-twitter" target="_blank"></a>
+                <a href="https://twitter.com/" class="nav-link fa fa-twitter" target="_blank"></a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link fa fa-instagram" target="_blank"></a>
+                <a href="https://www.instagram.com/morrisonsean/" class="nav-link fa fa-instagram" target="_blank"></a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link fa fa-linkedin" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/theseanmorrison/" class="nav-link fa fa-linkedin" target="_blank"></a>
               </li>
             </ul>
 
