--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
       </div>
       <div class="col-sm-4">
         <h3>Connect</h3>
-        <a href="https://www.facebook.com/seanmorrison" target="_blank" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/SeanMorrison" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/TechSnazzyLLC" target="_blank" class="fa fa-twitter"></a>
         <a href="https://www.instagram.com/morrisonsean/" target="_blank" class="fa fa-instagram"></a>
         <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://www.youtube.com/SeanMorrisonHeyNow" target="_blank" class="fa fa-youtube"></a>
