--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Website Development and IT Consultation Services<br></h2>
-                <p class="text-center">Providing top-notch IT support service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...</p>
+                <p class="text-center lead">Providing top-notch IT support service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...</p>
+                <p class="text-center lead">You won't need to be tech savvy when you have TechSnazzy!</p>
             </div>
             <div class="buttons"></div>
         </div>
