--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/techsnazzy-logo.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:150px;height:50px;"></a><button class="navbar-toggler" data-toggle="collapse"
+            <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/ts-final-lg.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:150px;height:50px;"></a><button class="navbar-toggler" data-toggle="collapse"
                     data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
