--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div>
         <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/ts-final-lg.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:150px;height:50px;"></a><button class="navbar-toggler" data-toggle="collapse"
+            <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/ts-final-lg.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:200px;height:100px;"></a><button class="navbar-toggler" data-toggle="collapse"
                     data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
@@ -31,7 +31,7 @@
     <div class="highlight-blue">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Website Development and IT Consultation Services<br></h2>
+                <h2 class="text-center">Website Development & IT Consultation Services<br></h2>
                 <p class="text-center lead">Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...</p>
                 <p class="text-center lead">You won't need to be tech savvy when you have TechSnazzy!</p>
             </div>
