--- a/index.html
+++ b/index.html
@@ -1,56 +1,213 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/img/ts-final-lg.png">
+    <meta property="og:image" content="assets/img/techsnazzy-logo.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <title>TechSnazzy, LLC</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Features-Clean.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css">
+    <link rel="stylesheet" href="assets/css/Map-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>TechSnazzy, LLC - Technology Consultation Services</title>
 </head>
 
 <body>
-    <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean">
-            <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/ts-final-lg.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:200px;height:100px;"></a><button class="navbar-toggler" data-toggle="collapse"
-                    data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#">About</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Contact Me</a></li>
+
+  <!-- NAVIGATION -->
+  <div>
+      <nav class="navbar navbar-light navbar-expand-md navigation-clean">
+          <div class="container"><a class="navbar-brand" href="#" style="background-image:url(&quot;assets/img/techsnazzy-logo.png&quot;);background-position:center;background-size:80%;background-repeat:no-repeat;width:150px;height:50px;"></a><button class="navbar-toggler" data-toggle="collapse"
+                  data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+              <div class="collapse navbar-collapse" id="navcol-1">
+                  <ul class="nav navbar-nav ml-auto">
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="#">Home</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="#about-me">About</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="#contact-me">Contact</a></li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+  </div>
+
+  <!-- INTRO -->
+  <div class="highlight-blue">
+      <div class="container">
+          <div class="intro">
+              <h2 class="text-center display-4">TechSnazzy, LLC</h2>
+              <h2 class="text-center">Technology Consultation Services</h2>
+              <p class="text-center lead">
+                Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...
+              </p><br><br>
+              <p class="text-center lead">
+                You won't need to be tech savvy when you have TechSnazzy!
+              </p>
+          </div>
+          <div class="buttons"></div>
+      </div>
+  </div>
+
+  <!-- PARALLAX GOLDEN GATE -->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/golden-gate.jpg);background-position:center;background-size:cover;"></div>
+
+  <!-- SERVICES -->
+  <div class="features-clean">
+      <div class="container">
+          <div class="intro">
+              <h2 class="text-center">Solutions</h2>
+              <p class="text-center">Whether it's Windows, Mac or Linux I can help. You can count on me for friendly and quality service. Technology should help you be more productive and get more done without breaking the bank.</p>
+          </div>
+          <div class="row features">
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-briefcase icon"></i>
+                  <h3 class="name">Small/Medium Sized Business</h3>
+                  <p class="description">With over 20 years of experience working with small and medium sized businesses, I understand your needs and can help you with your business technology.</p>
+              </div>
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-users icon"></i>
+                  <h3 class="name">Friendly Customer Service</h3>
+                  <p class="description">Helpdesk, System Administration, Network Support, Data Backups and more. I will listen to your needs and help you find solutions.</p>
+              </div>
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-laptop icon"></i>
+                  <h3 class="name">Helpdesk Support</h3>
+                  <p class="description">Having a full-time Helpdesk on staff doesn't make financial sense for you. Most of your needs are met but you just need a tech person available to help out once in awhile.</p>
+              </div>
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-cloud icon"></i>
+                  <h3 class="name">Web Site Development</h3>
+                  <p class="description">Maybe you need a simple website. Something that establishes your business presence and communicates your products and services to your customers and won't cost a fortune to maintain.</p>
+              </div>
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-server icon"></i>
+                  <h3 class="name">Data Backups</h3>
+                  <p class="description">Do you backup your data? If not, you should. There are many ways to backup your data. Let's discuss the option that works best for you.</p>
+              </div>
+              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-dollar icon"></i>
+                  <h3 class="name">Affordable</h3>
+                  <p class="description">Technology solutions don't have to be expensive. Today there are many affordable options for you that will suit your business needs.</p>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <!-- PARALLAX COMPUTER FRONT-->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/computer-front.jpg);background-position:center;background-size:cover;"></div>
+
+  <!-- ABOUT -->
+  <div id="about-me" class="highlight-blue">
+      <div class="container">
+          <div class="intro">
+              <h2 class="text-center">About Me</h2>
+              <p class="lead">
+                My name is Sean Morrison. Feel free to follow me on my social sites to learn more about me. Over the last 20 years, I've been an IT Support Specialist with small to medium sized businesses in the Bay Area. I have been a professional Helpdesk, System and Network Administrator, developed websites and worked with a variety of hardware and software.
+              </p>
+          </div>
+          <div class="buttons"><a class="btn btn-primary" role="button" href="https://www.linkedin.com/in/theseanmorrison" target="_blank">Learn more...</a></div>
+      </div>
+  </div>
+
+  <!-- PARALLAX COYOTE HILLS -->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/coyote-hills.jpg);background-position:center;background-size:cover;"></div>
+
+  <!-- LOCATION -->
+  <div id="map-me" class="highlight-blue">
+      <div class="container">
+        <div class="intro">
+            <h2 class="text-center">Located in San Jose, CA</h2>
+        </div>
+      </div>
+          <div class="text-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d203130.40383348995!2d-121.95749605721039!3d37.29720613266263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fcae48af93ff5%3A0xb99d8c0aca9f717b!2sSan+Jose%2C+CA!5e0!3m2!1sen!2sus!4v1523229541888" scrolling="no" width="75%" height="450" frameborder="0" style="border:0" allowfullscreen>
+            </iframe>
+          </div>
+    </div>
+
+  <!-- PARALLAX CLOUD BACKUP -->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/cloud-backup.jpg);background-position:center;background-size:cover;"></div>
+
+  <!-- CONTACT -->
+  <div id="contact-me" class="contact-clean">
+      <form action="https://formspree.io/seanwuzhere@gmail.com" method="POST">
+          <h2 class="text-center">Contact Me</h2>
+          <p class="lead">
+            Send me a message. I'd love to hear from you.
+          </p>
+          <div class="form-group">
+            <input class="form-control" type="text" name="name" placeholder="Full Name">
+          </div>
+          <div class="form-group">
+            <input class="form-control is-invalid" type="email" name="email" placeholder="Email Address">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" rows="14" name="message" placeholder="Message inquiry">
+            </textarea>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">send</button>
+          </div>
+      </form>
+  </div>
+
+  <!-- PARALLAX SURFACE LAPTOP -->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/surface-laptop.jpg);background-position:center;background-size:cover;"></div>
+
+  <!-- FOOTER -->
+  <div class="footer-clean">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">Systems Administration</a></li>
+                        <li><a href="#">Web Development</a></li>
+                        <li><a href="#">Infrastructure Support</a></li>
                     </ul>
                 </div>
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>Company</h3>
+                    <ul>
+                        <li><a href="#about-me">About</a></li>
+                        <li><a href="#contact-me">Contact</a></li>
+                        <li><a href="#map-me">Location</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 item text">
+                    <h3>TechSnazzy, LLC</h3>
+                    <p>
+                      Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...
+                    </p><br>
+                    <p>
+                      You won't need to be tech savvy when you have TechSnazzy!
+                    </p>
+                </div>
+                <div class="col item social">
+                  <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank"><i class="icon ion-social-facebook"></i></a>
+                  <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"><i class="icon ion-social-twitter"></i></a>
+                  <a href="https://www.instagram.com/TechSnazzyLLC"  target="_blank"><i class="icon ion-social-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+                </div>
             </div>
-        </nav>
-    </div>
-    <div class="highlight-blue">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Website Development & IT Consultation Services<br></h2>
-                <p class="text-center lead">Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...</p>
-                <p class="text-center lead">You won't need to be tech savvy when you have TechSnazzy!</p>
-            </div>
-            <div class="buttons"></div>
+            <p class="copyright text-center">© 2018 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site coded and written by <a href="http://www.twitter.com/seanmorrison" target="_blank">Sean Morrison</a></p>
         </div>
-    </div>
-    <div class="footer-basic">
-        <footer>
-            <div class="social">
-              <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank"><i class="icon ion-social-facebook"></i></a>
-              <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank"><i class="icon ion-social-twitter"></i></a>
-              <a href="https://www.instagram.com/TechSnazzyLLC"  target="_blank"><i class="icon ion-social-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank"><i class="icon ion-social-linkedin"></i></a></div>
-            <p class="copyright">© 2018 <a href="https://techsnazzy.com">TechSnazzy, LLC</a> - site coded and written by <a href="http://www.twitter.com/seanmorrison" target="_blank">Sean Morrison</a> </p>
-        </footer>
-    </div>
-    <footer></footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    </footer>
+  </div>
+
+  <!-- SCRIPTS -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/js/bs-animation.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 </body>
 
 </html>
