--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       </div>
   </div>
 
-  <!-- PARALLAX COYOTE HILLS -->
-  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/coyote-hills.jpg);background-position:center;background-size:cover;"></div>
+  <!-- PARALLAX COMPUTER CODE -->
+  <div data-bs-parallax-bg="true" style="height:500px;background-image:url(assets/img/para/computer-code.jpg);background-position:center;background-size:cover;"></div>
 
   <!-- LOCATION -->
   <div id="map-me" class="highlight-blue">
