--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
   <script src="assets/js/bs-animation.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117515000-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117515000-1');
+  </script>
+
 </body>
 
 </html>
