--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <title>TechSnazzy, LLC - Technology Consultation Services</title>
 </head>
 
@@ -51,12 +53,25 @@
               <h2 class="text-center">Technology Consultation Services</h2>
               <p class="text-center lead">
                 Providing top-notch IT support and service for Windows, Mac and Linux and Front End Web Development using HTML, CSS and JavaScript. Check out my social sites below to learn more...
-              </p><br><br>
-              <p class="text-center lead">
+              </p>
+              <div class="social text-center display-4">
+                <a href="https://www.facebook.com/TechSnazzyLLC" target="_blank">
+                  <i class="fab fa-facebook-square text-white"></i>
+                </a>
+                <a href="https://www.twitter.com/TechSnazzyLLC" target="_blank">
+                  <i class="fab fa-twitter-square text-white"></i>
+                </a>
+                <a href="https://www.instagram.com/TechSnazzyLLC" target="_blank">
+                  <i class="fab fa-instagram text-white"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank">
+                  <i class="fab fa-linkedin text-white"></i>
+                </a>
+              </div><br>
+              <p class="slogan text-center text-white">
                 You won't need to be tech savvy when you have TechSnazzy!
               </p>
           </div>
-          <div class="buttons"></div>
       </div>
   </div>
 
