--- a/index.html
+++ b/index.html
@@ -94,29 +94,35 @@
               <p class="text-center">Whether it's Windows, Mac or Linux I can help. You can count on me for friendly and quality service. Technology should help you be more productive and get more done without breaking the bank.</p>
           </div>
           <div class="row features">
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-briefcase icon"></i>
-                  <h3 class="name">Small/Medium Sized Business</h3>
-                  <p class="description">With over 20 years of experience working with small and medium sized businesses, I understand your needs and can help you with your business technology.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-briefcase icon"></i>
+                <h3 class="name">Small/Medium Sized Business</h3>
+                <p class="description">With over 20 years of experience working with small and medium sized businesses, I understand your needs and can help you with your business technology.</p>
               </div>
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-users icon"></i>
-                  <h3 class="name">Friendly Customer Service</h3>
-                  <p class="description">Helpdesk, System Administration, Network Support, Data Backups and more. I will listen to your needs and help you find solutions.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-users icon"></i>
+                <h3 class="name">Friendly Customer Service</h3>
+                <p class="description">Helpdesk, System Administration, Network Support, Data Backups and more. I will listen to your needs and help you find solutions.</p>
               </div>
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-laptop icon"></i>
-                  <h3 class="name">Helpdesk Support</h3>
-                  <p class="description">Having a full-time Helpdesk on staff doesn't make financial sense for you. Most of your needs are met but you just need a tech person available to help out once in awhile.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-laptop icon"></i>
+                <h3 class="name">Helpdesk Support</h3>
+                <p class="description">Having a full-time Helpdesk on staff doesn't make financial sense for you. Most of your needs are met but you just need a tech person available to help out once in awhile.</p>
               </div>
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-cloud icon"></i>
-                  <h3 class="name">Web Site Development</h3>
-                  <p class="description">Maybe you need a simple website. Something that establishes your business presence and communicates your products and services to your customers and won't cost a fortune to maintain.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-cloud icon"></i>
+                <h3 class="name">Web Site Development</h3>
+                <p class="description">Maybe you need a simple website. Something that establishes your business presence and communicates your products and services to your customers and won't cost a fortune to maintain.</p>
               </div>
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-server icon"></i>
-                  <h3 class="name">Data Backups</h3>
-                  <p class="description">Do you backup your data? If not, you should. There are many ways to backup your data. Let's discuss the option that works best for you.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-server icon"></i>
+                <h3 class="name">Data Backups</h3>
+                <p class="description">Do you backup your data? If not, you should. There are many ways to backup your data. Let's discuss the option that works best for you.</p>
               </div>
-              <div class="col-sm-6 col-lg-4 item"><i class="fa fa-dollar icon"></i>
-                  <h3 class="name">Affordable</h3>
-                  <p class="description">Technology solutions don't have to be expensive. Today there are many affordable options for you that will suit your business needs.</p>
+              <div class="col-sm-6 col-lg-4 item">
+                <i class="fas fa-dollar-sign icon"></i>
+                <h3 class="name">Affordable</h3>
+                <p class="description">Technology solutions don't have to be expensive. Today there are many affordable options for you that will suit your business needs.</p>
               </div>
           </div>
       </div>
