--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 My name is Sean Morrison. Feel free to follow me on my social sites to learn more about me. Over the last 20 years, I've been an IT Support Specialist with small to medium sized businesses in the Bay Area. I have been a professional Helpdesk, System and Network Administrator, developed websites and worked with a variety of hardware and software.
               </p>
           </div>
-          <div class="buttons"><a class="btn btn-primary" role="button" href="https://www.linkedin.com/in/theseanmorrison" target="_blank">Learn more...</a></div>
+          <div class="buttons"><a class="btn btn-success" role="button" href="https://www.linkedin.com/in/theseanmorrison" target="_blank">Learn more...</a></div>
       </div>
   </div>
 
