--- a/assets/other/links.html
+++ b/assets/other/links.html
@@ -29,6 +29,9 @@
       <li>
         <a href="https://www.sitepoint.com/how-to-build-responsive-images-with-srcset/" target="_blank">How to Build Responsive Images with srcset</a>
       </li>
+      <li>
+        <a href="https://rawgit.com/" target="_blank">https://rawgit.com/</a>
+      </li>
     </ul>
 
   </body>
