--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
               <p class="text-center lead">
                 You won't need to be tech savvy when you have TechSnazzy!
               </p>
+              <div class="text-center">
+                <a href="stanford-hiking/index.html" target="_blank">Sean Portfolio</a>
+                <a href="stanford-hiking/index.html" target="_blank">Stanford Hiking</a>
+                <a href="stanford-hiking/index.html" target="_blank">Tribute Page</a>
+              </div>
           </div>
       </div>
   </div>
