Update the links for project sites

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 You won't need to be tech savvy when you have TechSnazzy!
               </p>
               <div class="text-center">
-                <a href="stanford-hiking/index.html" target="_blank">Sean Portfolio</a>
+                <a href="sean-portfolio/index.html" target="_blank">Sean Portfolio</a>
                 <a href="stanford-hiking/index.html" target="_blank">Stanford Hiking</a>
-                <a href="stanford-hiking/index.html" target="_blank">Tribute Page</a>
+                <a href="tribute-page/index.html" target="_blank">Tribute Page</a>
               </div>
           </div>
       </div>
