Added my Github social link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <a href="https://www.linkedin.com/in/theseanmorrison" target="_blank">
                   <i class="fab fa-linkedin text-white"></i>
                 </a>
+                <a href="https://github.com/TechSnazzy" target="_blank">
+                  <i class="fab fa-github text-white"></i>
+                </a>
               </div><br>
               <p class="text-center lead">
                 You won't need to be tech savvy when you have TechSnazzy!
